--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm an <b>Assistant Professor</b>expert and technology enthusiast who is passionate about helping institutions in developing students  I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 17 years of experience. <a href="https://techtrainer20.github.io/git_con2/" traget="_target"">cyber security </a> landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
+            <p>I'm vishali <b>computer application</b>expert and technology enthusiast who is passionate about helping institutions in developing students  I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 17 years of experience. <a href="https://techtrainer20.github.io/git_con2/" traget="_target"" </a> landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
         </div>
     </section>
 
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>MSc., MPhil.,NET</p>
+            <p>computer application</p>
             
             
         </div>
